@@ -25,6 +25,7 @@
     * Add Net::SSLeay::SSL_SESSION class.
     * Add Net::SSLeay::SSL_SESSION#DESTROY method.
     * Add Net::SSLeay#session_reused method.
+    * Add Net::SSLeay::CIPHER class.
     
 0.009 2024-11-08
   [Requirement Changes]
